--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,6 +22,7 @@
     <small class="text-muted">Created at <%= @article.created_at.strftime("%B %d, %Y") %></small>
   </div>
   <hr>
+  <%user_present(current_user) do%>
     <%article_published(@article) do%>
       <div class="commentsButton">
         <button type="button" class="btn btn-primary btn-sm float-end commentsButton" id="commentsButton">Comments</button> 
@@ -29,6 +30,7 @@
         <button type="button" class="btn btn-primary btn-sm float-end mr-3" data-bs-toggle="modal" data-bs-target="#exampleModal">New Comment</button>
       </div>
     <%end%>
+  <%end%>
   <div class="commentsContainer">
   </div>
 </div>
