--- a/app/views/client_users/_form.html.erb
+++ b/app/views/client_users/_form.html.erb
@@ -3,17 +3,18 @@
     <div class="col-md-8">
       <div class="card border shadow-sm">
         <div class="card-body">
-          <%= form_with(model: client_user) do |f| %>
-            <%client_user_form_errors(client_user) do%>
-            <div style="color: red">
+          <%= form_with(model: client_user, local: true) do |f| %>
+            <%client_user_form_errors(client_user) do %>
+              <div style="color: red">
                 <h2><%= pluralize(client_user.errors.count, "error") %> prohibited this client_user from being saved:</h2>
+
                 <ul>
-                <% client_user.errors.each do |error| %>
-                  <li><%= error.full_message %></li>
-                <% end %>
+                  <% client_user.errors.each do |error| %>
+                    <li><%= error.full_message %></li>
+                  <% end %>
                 </ul>
               </div>
-            <% end %>
+            <% end %> 
 
             <div class="mb-3">
               <%= f.label :name, class: "form-label" %>
@@ -46,7 +47,7 @@
             </div>
 
             <div class="text-center">
-                <%= f.submit "Create Admin", class: "btn btn-primary" %>
+                <%= f.submit "Create User", class: "btn btn-primary" %>
             </div>
 
           <% end %>
