--- a/app/views/shared/_client_admin_navbar.html.erb
+++ b/app/views/shared/_client_admin_navbar.html.erb
@@ -22,10 +22,13 @@
           </div>
         </li>
         <li class="nav-item">
-          <%= link_to "Review Articles",review_articles_path(client_id: client.sub_domain),class:"nav-link" %>
+          <%= link_to "Review Articles",review_articles_new_path(client_id: client.sub_domain),class:"nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Authors",client_users_path(client_id: client.sub_domain),class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Assign Articles",new_article_assignment_path(client_id: client.sub_domain),class:"nav-link" %>
         </li>
         <li class="nav-item">
           <%= button_to "Logout", destroy_user_session_path(client_id: client.sub_domain),method: :delete,class:"btn btn-danger btn-sm " %>
@@ -73,6 +76,5 @@
     });
     });
   });
-
 
 </script>
