--- a/app/views/client_users/index.html.erb
+++ b/app/views/client_users/index.html.erb
@@ -10,15 +10,38 @@
     </thead>
     <tbody>
       <% @authors.each do |author| %>
-        <tr>
-          <td><%= author.user.name %></td>
-          <td><%= author.user.email %></td>
-          <td><%= author.articles.count %></td>
-          <td>
-            <%= button_to 'Delete', client_user_path(author.client, id: author.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-          </td>
-        </tr>
+<tr data-client-name="<%= author.client.sub_domain %>" data-author-id="<%= author.id %>">
+  <td><%= author.user.name %></td>
+  <td><%= author.user.email %></td>
+  <td><%= author.articles.count %></td>
+  <td>
+    <%= button_to 'Delete', '#', method: :delete, data: { confirm: 'Are you sure?', client_name: author.client.sub_domain, author_id: author.id }, class: "btn btn-danger" %>
+  </td>
+</tr>
+
       <% end %>
     </tbody>
   </table>
 </div>
+
+<script>
+$(document).ready(function() {
+  $('.btn-danger').on('click', function(e) {
+    e.preventDefault(); // Prevent the default form submission
+
+    var clientName = $(this).data('client-name'); 
+    var authorId = $(this).data('author-id'); 
+      $.ajax({
+        url: `/${clientName}/client_users/${authorId}`, 
+        type: 'DELETE',
+        success: function() {
+          $('tr[data-author-id="' + authorId + '"]').remove();
+        },
+        error: function() {
+          alert('An error occurred. Please try again.');
+        }
+      });
+  });
+});
+</script>
+
