--- a/app/views/article_previews/preview_articles.html.erb
+++ b/app/views/article_previews/preview_articles.html.erb
@@ -1,3 +1,8 @@
+<%= stylesheet_link_tag ('article_review_article') %>
+<%article_count_nil(@articles) do%>
+    <h1> No Articles to Review </h1>
+<%end%>
+
 <% @articles.each do |article| %>
     <%= render 'articles/article', article: article %>
 <% end %>
