--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag('article_form') %>
+
 <div class="container">
   <div class="card shadow mb-4">
     <div class="card-header py-3">
