--- a/app/views/shared/_author_navbar.html.erb
+++ b/app/views/shared/_author_navbar.html.erb
@@ -23,8 +23,7 @@
     <div class="notifications-container" id="assignedNotifications"> 
       <button class="btn btn-primary btn-sm notificationButton" data-client-name="<%=client.sub_domain%>">Notifications</button>
       <div class="notification-template" style="display:none;">
-          <p>New Notification</p>
-          <div class="notification">
+          <div class="notifications">
           </div>
       </div>
     </div>
@@ -32,18 +31,30 @@
 </nav>
 
 <script>
+// /:client_id/notifications
 $(document).ready(function () {
   $('#assignedNotifications').click(function (e) { 
     e.preventDefault();
     var clientName = $('.notificationButton').data('client-name');
-    console.log(clientName);
+    // console.log(clientName);
     $.ajax({
-      url: `/${clientName}/author_notifications`,
+      url: `/${clientName}/all_messages`,
       method: 'GET',
       success: function (response) {
         console.log(response);
+        var notifications = $(response).find('.notification');
+        // Clear the notifications div before appending new content
+        $('.notifications').empty();
+        // Append each notification to the notifications div
+        notifications.each(function() {
+          $('.notifications').append($(this).html());
+        });
+        // Optionally, show the notifications div if it was hidden
+        $('.notifications').css('display', 'block');
       }
     });
   });
 });
+
+
 </script>
