--- a/app/views/article_assignments/_form.html.erb
+++ b/app/views/article_assignments/_form.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag('assign_articles') %>
 <div class="container">
 <%= form_with url: article_assignments_path(), method: :post, local: true do |form| %>
   <div class="mb-3">
