--- a/app/views/client_users/_form.html.erb
+++ b/app/views/client_users/_form.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag('client_user_form') %>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
