--- a/app/views/shared/_client_admin_navbar.html.erb
+++ b/app/views/shared/_client_admin_navbar.html.erb
@@ -22,7 +22,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <%= link_to "Review Articles",review_articles_new_path(client_id: client.sub_domain),class:"nav-link" %>
+          <%= link_to "Review Articles",review_articles_path(client_id: client.sub_domain),class:"nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Authors",client_users_path(client_id: client.sub_domain),class:"nav-link" %>
