--- a/app/assets/stylesheets/article_index.css
+++ b/app/assets/stylesheets/article_index.css
@@ -1,3 +1,33 @@
-body{
+body {
     background-color: #d4d4fb;
-    }
+}
+
+.top-right-button {
+    position: fixed;
+    top: 10px;
+    /* Adjust as needed */
+    right: 10px;
+    /* Adjust as needed */
+    z-index: 1000;
+    /* Ensure it's above other content */
+}
+
+
+.container {
+
+    max-width: 1200px;
+    /* Adjust based on your design */
+    margin: 0 auto;
+    /* Center the container */
+    padding: 20px;
+    /* Add some padding */
+}
+
+.container.btn {
+    display: block;
+    /* Make the submit button a block element */
+    width: 100%;
+    /* Full width of the container */
+    margin-top: 20px;
+    /* Add some space above the button */
+}
