--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag('ajax_files/article')%>
+<%= stylesheet_link_tag ('article_article') %>
 
 <%if current_user%>
   <% if current_user.likes.find_by(article: article) %>
@@ -17,10 +18,12 @@
 
 
 <div class="card" data-client-name="<%= article.client.sub_domain %>" data-article-id="<%=article.id%>">
-  <div class="card-header d-flex justify-content-between align-items-center">
+<div class="card-header d-flex justify-content-between align-items-center">
+  <div class="title-container">
     <h1><%= article.title %></h1>
-    <span class="badge bg-secondary"><%= article.category.title %></span>
   </div>
+  <span class="badge bg-secondary"><%= article.category.title %></span>
+</div>
   <div class="card-body">
     <% article_image_attached(article) do %>
       <div class="d-flex justify-content-center">
@@ -58,34 +61,3 @@
     </div>
   </div>
 </div>
-
-
-<style>
-.article-container {
-  margin: 10px 0;
-}
-
-.article-title {
-  text-align: center;
-}
-
-.article-card {
-  margin: 0 20px;
-}
-
-.card-img-top {
-  margin-bottom: 20px;
-}
-
-.card-tags {
-  margin-top: 20px;
-}
-
-.card{
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 10px;
-}
-
-
-</style>
