--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag('ajax_files/client_client') %>
 <div class="card mb-4" id="client-card-<%= client.id %>">
   <div class="card-body">
       <h5 class="card-title"><%= client.name %></h5>
@@ -15,42 +16,3 @@
       <button class="btn btn-danger btn-sm delete-client-bt mt-3" data-client-id="<%= client.id %>">Delete</button>
   </div>
 </div>
-
-
-<script>
-    $(() => {
-      $("p.is-active > span").on("click", (event)=>{
-        event.stopImmediatePropagation();
-        const clientID = $(event.target).attr("data-client-id")
-        // console.log(clientID);
-        $.ajax({
-          type: "post",
-          url: `/clients/${clientID}/change_client_active_status`,
-          success: function (response) {
-            const txt = $(event.target).html();
-            const res_txt = txt == "Yes" ? "No" : "Yes";
-            $(event.target).html(res_txt);
-          }
-        });
-      })
-    });
-
-
-  $(document).ready(function () {
-    $('.delete-client-bt').click(function(event){
-      event.stopImmediatePropagation();
-      var clientId = $(this).attr('data-client-id')
-      // console.log(clientId); 
-      $.ajax({
-        url: "/clients/"+clientId,
-        method: "DELETE",
-        success: function (response) {
-          // console.log(response);
-        $('#client-card-'+clientId).remove();
-        }
-      });
-    })
-  });
-
-</script>
-
