--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag ('article_show') %>
+<%= javascript_include_tag "ajax_files/show_article" %>
 <div class="card" data-client-name="<%= @article.client.sub_domain %>" data-article-id="<%=@article.id%>">
   <div class="card-header d-flex justify-content-between align-items-center">
     <h1><%= @article.title %></h1>
@@ -10,7 +12,6 @@
       </div>
     <% end %>
     <p class="card-text"><%= @article.body%></p>
-    <!-- Displaying tags -->
     <div class="card-tags mt-3">
     <strong>Tags:</strong>
       <% @article.tags.each do |tag| %>
@@ -35,7 +36,6 @@
   </div>
 </div>
 
-<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -52,31 +52,3 @@
     </div>
   </div>
 </div>
-
-<script>
-$(document).ready(function() {
-    $('.commentsButton > button').click(function(e) {
-      e.preventDefault();
-      e.stopImmediatePropagation();
-        var cardDiv = $('.card');
-        const clientId = cardDiv.data('client-name')
-        const articleId = cardDiv.data('article-id')
-        const url = `/${clientId}/articles/${articleId}/comments`;
-        $.ajax({
-            url: url,
-            method: 'GET',
-            data: $.param({article_id: articleId}),
-            success: function (response) {
-                console.log(response);
-                var $response = $(response);
-                var commentElements = $response.find('.comment');
-                var allCommentsHtml = '';
-                commentElements.each(function() {
-                    allCommentsHtml += $(this).html();
-                });
-                $('.commentsContainer').html(allCommentsHtml);
-            }
-        });
-    });
-});
-</script>
