--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_include_tag ('ajax_files/client_index') %>
+<%= stylesheet_link_tag ('backgroung_color') %>
+
 <div class="client-container">
    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -24,18 +27,3 @@
       </div>
    </div>
 </div>
-
-<script> 
-   $(document).ready(function () {
-      $('#close-modal-btn').click(function () {
-         $.ajax({
-         url: "/clients",
-         method: "GET",
-         success: function (response) {
-            $('.client-container').html(response)
-         }
-         });
-      })
-   });
-</script>   
-
