--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -30,7 +30,7 @@
         <%= image_tag(article.image, style: "width: 350px; height: 200px", class: "card-img-top mb-3") %>
       </div>
     <% end %>
-    <p class="card-text"><%= truncate(article.body, length: 400) %></p>
+    <p class="card-text"> <%= article.body.to_plain_text.truncate(100, omission: "...") %></p>
     <div class="card-tags mt-3">
     <strong>Tags:</strong>
       <% article.tags.each do |tag| %>
