--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,8 @@
-<div class="container">
-   <h1>Active Clients</h1>
+<%= stylesheet_link_tag ('home_page')%>
+<div class="homepage">
+        <h1 class="title">Content Management</h1>
+        <div class="container">
+   <h1 class="clientsList">Active Clients</h1>
    <table class="table table-striped">
       <thead>
          <tr>
@@ -13,14 +16,12 @@
          <tr>
             <td><%= client.name %></td>
             <td>
-               <%= link_to 'Sign Up', new_user_registration_path(client_id: client.sub_domain), class: 'btn btn-primary' %>
-            </td>
-            <td>
-               <%= button_to "Logout", destroy_user_session_path(client_id: client.sub_domain),method: :delete %>  
+               <%= link_to 'Sign In', new_user_session_path(client_id: client.sub_domain), class: 'btn btn-primary' %>
             </td>
          </tr>
          <%end%>
          <% end %>
       </tbody>
    </table>
-</div>
+   </div>
+    </div>
